fix(ZNTA-1903): remove unneeded overflow css for editor sidebar

--- a/server/zanata-frontend/src/frontend/app/editor/containers/Sidebar/index.css
+++ b/server/zanata-frontend/src/frontend/app/editor/containers/Sidebar/index.css
@@ -6,8 +6,7 @@
   position: static !important;
   padding-top: 90px !important;
   height: 99.5% !important;
-  overflow: auto !important;
-  overflow-y: scroll !important;
+  overflow-y: auto !important;
   overflow-x: hidden !important;
 }
 
